[package]
name = "rcon"
version = "0.1.0"
authors = ["Scott Hussey <sthussey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rcon"
path = "src/cli/rcon.rs"

[dependencies]
toml = "0.5.6"
serde = "1.0.104"
serde_derive = "1.0.104"
clap = "2.33.0"
